footer alignment corrected

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,1 +1,6 @@
-
+.footer p {
+  font-family: "Fredericka the Great", cursive;
+  font-size: 16px;
+  font-weight: 700;
+  color: #483434;
+}
