--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,5 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  text-align: center;
 }
